--- a/src/jade/blocks/_sidebar.jade
+++ b/src/jade/blocks/_sidebar.jade
@@ -1,7 +1,7 @@
 aside.sidebar
 	h2.sidebar__title Настройки
-	include _sidebar_inputs
-	include _sidebar_position.jade
+	include _sidebar-upload
+	include _sidebar-position
 	include _sidebar-slider
 	include _sidebar-buttons
 
