--- a/src/style/config/_sprite.scss
+++ b/src/style/config/_sprite.scss
@@ -12,164 +12,175 @@ At the bottom of this section, we provide information about the spritesheet itse
 $spritesheet: width height image $spritesheet-sprites;
 */
 $arrow-down-hover-name: 'arrow-down-hover';
-$arrow-down-hover-x: 289px;
+$arrow-down-hover-x: 310px;
 $arrow-down-hover-y: 0px;
-$arrow-down-hover-offset-x: -289px;
+$arrow-down-hover-offset-x: -310px;
 $arrow-down-hover-offset-y: 0px;
 $arrow-down-hover-width: 13px;
 $arrow-down-hover-height: 8px;
-$arrow-down-hover-total-width: 302px;
-$arrow-down-hover-total-height: 278px;
+$arrow-down-hover-total-width: 323px;
+$arrow-down-hover-total-height: 294px;
 $arrow-down-hover-image: '../img/sprites/sprite.png';
-$arrow-down-hover: (289px, 0px, -289px, 0px, 13px, 8px, 302px, 278px, '../img/sprites/sprite.png', 'arrow-down-hover', );
+$arrow-down-hover: (310px, 0px, -310px, 0px, 13px, 8px, 323px, 294px, '../img/sprites/sprite.png', 'arrow-down-hover', );
 $arrow-down-name: 'arrow-down';
-$arrow-down-x: 250px;
-$arrow-down-y: 24px;
-$arrow-down-offset-x: -250px;
-$arrow-down-offset-y: -24px;
+$arrow-down-x: 284px;
+$arrow-down-y: 16px;
+$arrow-down-offset-x: -284px;
+$arrow-down-offset-y: -16px;
 $arrow-down-width: 13px;
 $arrow-down-height: 8px;
-$arrow-down-total-width: 302px;
-$arrow-down-total-height: 278px;
+$arrow-down-total-width: 323px;
+$arrow-down-total-height: 294px;
 $arrow-down-image: '../img/sprites/sprite.png';
-$arrow-down: (250px, 24px, -250px, -24px, 13px, 8px, 302px, 278px, '../img/sprites/sprite.png', 'arrow-down', );
+$arrow-down: (284px, 16px, -284px, -16px, 13px, 8px, 323px, 294px, '../img/sprites/sprite.png', 'arrow-down', );
 $arrow-up-hover-name: 'arrow-up-hover';
-$arrow-up-hover-x: 276px;
-$arrow-up-hover-y: 8px;
-$arrow-up-hover-offset-x: -276px;
-$arrow-up-hover-offset-y: -8px;
+$arrow-up-hover-x: 271px;
+$arrow-up-hover-y: 24px;
+$arrow-up-hover-offset-x: -271px;
+$arrow-up-hover-offset-y: -24px;
 $arrow-up-hover-width: 13px;
 $arrow-up-hover-height: 8px;
-$arrow-up-hover-total-width: 302px;
-$arrow-up-hover-total-height: 278px;
+$arrow-up-hover-total-width: 323px;
+$arrow-up-hover-total-height: 294px;
 $arrow-up-hover-image: '../img/sprites/sprite.png';
-$arrow-up-hover: (276px, 8px, -276px, -8px, 13px, 8px, 302px, 278px, '../img/sprites/sprite.png', 'arrow-up-hover', );
+$arrow-up-hover: (271px, 24px, -271px, -24px, 13px, 8px, 323px, 294px, '../img/sprites/sprite.png', 'arrow-up-hover', );
 $arrow-up-name: 'arrow-up';
-$arrow-up-x: 263px;
-$arrow-up-y: 16px;
-$arrow-up-offset-x: -263px;
-$arrow-up-offset-y: -16px;
+$arrow-up-x: 297px;
+$arrow-up-y: 8px;
+$arrow-up-offset-x: -297px;
+$arrow-up-offset-y: -8px;
 $arrow-up-width: 13px;
 $arrow-up-height: 8px;
-$arrow-up-total-width: 302px;
-$arrow-up-total-height: 278px;
+$arrow-up-total-width: 323px;
+$arrow-up-total-height: 294px;
 $arrow-up-image: '../img/sprites/sprite.png';
-$arrow-up: (263px, 16px, -263px, -16px, 13px, 8px, 302px, 278px, '../img/sprites/sprite.png', 'arrow-up', );
+$arrow-up: (297px, 8px, -297px, -8px, 13px, 8px, 323px, 294px, '../img/sprites/sprite.png', 'arrow-up', );
 $fb-h-name: 'fb-h';
-$fb-h-x: 235px;
-$fb-h-y: 32px;
-$fb-h-offset-x: -235px;
-$fb-h-offset-y: -32px;
+$fb-h-x: 220px;
+$fb-h-y: 75px;
+$fb-h-offset-x: -220px;
+$fb-h-offset-y: -75px;
 $fb-h-width: 15px;
 $fb-h-height: 27px;
-$fb-h-total-width: 302px;
-$fb-h-total-height: 278px;
+$fb-h-total-width: 323px;
+$fb-h-total-height: 294px;
 $fb-h-image: '../img/sprites/sprite.png';
-$fb-h: (235px, 32px, -235px, -32px, 15px, 27px, 302px, 278px, '../img/sprites/sprite.png', 'fb-h', );
+$fb-h: (220px, 75px, -220px, -75px, 15px, 27px, 323px, 294px, '../img/sprites/sprite.png', 'fb-h', );
 $fb-name: 'fb';
-$fb-x: 220px;
-$fb-y: 59px;
-$fb-offset-x: -220px;
-$fb-offset-y: -59px;
+$fb-x: 235px;
+$fb-y: 48px;
+$fb-offset-x: -235px;
+$fb-offset-y: -48px;
 $fb-width: 15px;
 $fb-height: 27px;
-$fb-total-width: 302px;
-$fb-total-height: 278px;
+$fb-total-width: 323px;
+$fb-total-height: 294px;
 $fb-image: '../img/sprites/sprite.png';
-$fb: (220px, 59px, -220px, -59px, 15px, 27px, 302px, 278px, '../img/sprites/sprite.png', 'fb', );
+$fb: (235px, 48px, -235px, -48px, 15px, 27px, 323px, 294px, '../img/sprites/sprite.png', 'fb', );
+$input-pic-name: 'input-pic';
+$input-pic-x: 250px;
+$input-pic-y: 32px;
+$input-pic-offset-x: -250px;
+$input-pic-offset-y: -32px;
+$input-pic-width: 21px;
+$input-pic-height: 16px;
+$input-pic-total-width: 323px;
+$input-pic-total-height: 294px;
+$input-pic-image: '../img/sprites/sprite.png';
+$input-pic: (250px, 32px, -250px, -32px, 21px, 16px, 323px, 294px, '../img/sprites/sprite.png', 'input-pic', );
 $like-h-name: 'like-h';
-$like-h-x: 26px;
-$like-h-y: 214px;
-$like-h-offset-x: -26px;
-$like-h-offset-y: -214px;
+$like-h-x: 0px;
+$like-h-y: 262px;
+$like-h-offset-x: 0px;
+$like-h-offset-y: -262px;
 $like-h-width: 26px;
 $like-h-height: 32px;
-$like-h-total-width: 302px;
-$like-h-total-height: 278px;
+$like-h-total-width: 323px;
+$like-h-total-height: 294px;
 $like-h-image: '../img/sprites/sprite.png';
-$like-h: (26px, 214px, -26px, -214px, 26px, 32px, 302px, 278px, '../img/sprites/sprite.png', 'like-h', );
+$like-h: (0px, 262px, 0px, -262px, 26px, 32px, 323px, 294px, '../img/sprites/sprite.png', 'like-h', );
 $like-name: 'like';
-$like-x: 0px;
-$like-y: 246px;
-$like-offset-x: 0px;
-$like-offset-y: -246px;
+$like-x: 26px;
+$like-y: 230px;
+$like-offset-x: -26px;
+$like-offset-y: -230px;
 $like-width: 26px;
 $like-height: 32px;
-$like-total-width: 302px;
-$like-total-height: 278px;
+$like-total-width: 323px;
+$like-total-height: 294px;
 $like-image: '../img/sprites/sprite.png';
-$like: (0px, 246px, 0px, -246px, 26px, 32px, 302px, 278px, '../img/sprites/sprite.png', 'like', );
+$like: (26px, 230px, -26px, -230px, 26px, 32px, 323px, 294px, '../img/sprites/sprite.png', 'like', );
 $regul-h-name: 'regul-h';
 $regul-h-x: 196px;
-$regul-h-y: 86px;
+$regul-h-y: 102px;
 $regul-h-offset-x: -196px;
-$regul-h-offset-y: -86px;
+$regul-h-offset-y: -102px;
 $regul-h-width: 24px;
 $regul-h-height: 24px;
-$regul-h-total-width: 302px;
-$regul-h-total-height: 278px;
+$regul-h-total-width: 323px;
+$regul-h-total-height: 294px;
 $regul-h-image: '../img/sprites/sprite.png';
-$regul-h: (196px, 86px, -196px, -86px, 24px, 24px, 302px, 278px, '../img/sprites/sprite.png', 'regul-h', );
+$regul-h: (196px, 102px, -196px, -102px, 24px, 24px, 323px, 294px, '../img/sprites/sprite.png', 'regul-h', );
 $regul-name: 'regul';
 $regul-x: 172px;
-$regul-y: 110px;
+$regul-y: 126px;
 $regul-offset-x: -172px;
-$regul-offset-y: -110px;
+$regul-offset-y: -126px;
 $regul-width: 24px;
 $regul-height: 24px;
-$regul-total-width: 302px;
-$regul-total-height: 278px;
+$regul-total-width: 323px;
+$regul-total-height: 294px;
 $regul-image: '../img/sprites/sprite.png';
-$regul: (172px, 110px, -172px, -110px, 24px, 24px, 302px, 278px, '../img/sprites/sprite.png', 'regul', );
+$regul: (172px, 126px, -172px, -126px, 24px, 24px, 323px, 294px, '../img/sprites/sprite.png', 'regul', );
 $tw-h-name: 'tw-h';
 $tw-h-x: 144px;
-$tw-h-y: 134px;
+$tw-h-y: 150px;
 $tw-h-offset-x: -144px;
-$tw-h-offset-y: -134px;
+$tw-h-offset-y: -150px;
 $tw-h-width: 28px;
 $tw-h-height: 22px;
-$tw-h-total-width: 302px;
-$tw-h-total-height: 278px;
+$tw-h-total-width: 323px;
+$tw-h-total-height: 294px;
 $tw-h-image: '../img/sprites/sprite.png';
-$tw-h: (144px, 134px, -144px, -134px, 28px, 22px, 302px, 278px, '../img/sprites/sprite.png', 'tw-h', );
+$tw-h: (144px, 150px, -144px, -150px, 28px, 22px, 323px, 294px, '../img/sprites/sprite.png', 'tw-h', );
 $tw-name: 'tw';
 $tw-x: 116px;
-$tw-y: 156px;
+$tw-y: 172px;
 $tw-offset-x: -116px;
-$tw-offset-y: -156px;
+$tw-offset-y: -172px;
 $tw-width: 28px;
 $tw-height: 22px;
-$tw-total-width: 302px;
-$tw-total-height: 278px;
+$tw-total-width: 323px;
+$tw-total-height: 294px;
 $tw-image: '../img/sprites/sprite.png';
-$tw: (116px, 156px, -116px, -156px, 28px, 22px, 302px, 278px, '../img/sprites/sprite.png', 'tw', );
+$tw: (116px, 172px, -116px, -172px, 28px, 22px, 323px, 294px, '../img/sprites/sprite.png', 'tw', );
 $vk-h-name: 'vk-h';
-$vk-h-x: 84px;
-$vk-h-y: 178px;
-$vk-h-offset-x: -84px;
-$vk-h-offset-y: -178px;
+$vk-h-x: 52px;
+$vk-h-y: 212px;
+$vk-h-offset-x: -52px;
+$vk-h-offset-y: -212px;
 $vk-h-width: 32px;
 $vk-h-height: 18px;
-$vk-h-total-width: 302px;
-$vk-h-total-height: 278px;
+$vk-h-total-width: 323px;
+$vk-h-total-height: 294px;
 $vk-h-image: '../img/sprites/sprite.png';
-$vk-h: (84px, 178px, -84px, -178px, 32px, 18px, 302px, 278px, '../img/sprites/sprite.png', 'vk-h', );
+$vk-h: (52px, 212px, -52px, -212px, 32px, 18px, 323px, 294px, '../img/sprites/sprite.png', 'vk-h', );
 $vk-name: 'vk';
-$vk-x: 52px;
-$vk-y: 196px;
-$vk-offset-x: -52px;
-$vk-offset-y: -196px;
+$vk-x: 84px;
+$vk-y: 194px;
+$vk-offset-x: -84px;
+$vk-offset-y: -194px;
 $vk-width: 32px;
 $vk-height: 18px;
-$vk-total-width: 302px;
-$vk-total-height: 278px;
+$vk-total-width: 323px;
+$vk-total-height: 294px;
 $vk-image: '../img/sprites/sprite.png';
-$vk: (52px, 196px, -52px, -196px, 32px, 18px, 302px, 278px, '../img/sprites/sprite.png', 'vk', );
-$spritesheet-width: 302px;
-$spritesheet-height: 278px;
+$vk: (84px, 194px, -84px, -194px, 32px, 18px, 323px, 294px, '../img/sprites/sprite.png', 'vk', );
+$spritesheet-width: 323px;
+$spritesheet-height: 294px;
 $spritesheet-image: '../img/sprites/sprite.png';
-$spritesheet-sprites: ($arrow-down-hover, $arrow-down, $arrow-up-hover, $arrow-up, $fb-h, $fb, $like-h, $like, $regul-h, $regul, $tw-h, $tw, $vk-h, $vk, );
-$spritesheet: (302px, 278px, '../img/sprites/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($arrow-down-hover, $arrow-down, $arrow-up-hover, $arrow-up, $fb-h, $fb, $input-pic, $like-h, $like, $regul-h, $regul, $tw-h, $tw, $vk-h, $vk, );
+$spritesheet: (323px, 294px, '../img/sprites/sprite.png', $spritesheet-sprites, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
