--- a/src/style/components/_menu.scss
+++ b/src/style/components/_menu.scss
@@ -26,7 +26,7 @@
 	font-size: 20px;
 	line-height: 35px;
 	box-sizing: border-box;
-	border-bottom: 1px solid #fff;
+	border-bottom: 1px solid;
 	font-family: $font-family-light;
 	&:hover{
 		color: #d7d5d7;
@@ -46,7 +46,7 @@
 	position: relative;
 	left: -40px;
 	transition: left 1s;
-	width: 80px;
+	width: 40px;
 	display: inline-block;
 	vertical-align: middle;
 	&:hover{
