изменила название класса во втором инпуте координат, чтобы выводился псевдоэдемент Y

--- a/src/jade/blocks/_sidebar-position.jade
+++ b/src/jade/blocks/_sidebar-position.jade
@@ -29,8 +29,8 @@
 					.position-arrow__up
 					.position-arrow__down
 			.wrapper-position
-				label.sidebar-position__coordinate-labelX
-					input.position-input.coordinateX
+				label.sidebar-position__coordinate-labelY
+					input.position-input.coordinateY
 				.position-arrow
 					.position-arrow__up
 					.position-arrow__down
