--- a/src/style/components/_menu.scss
+++ b/src/style/components/_menu.scss
@@ -26,8 +26,8 @@
 	font-size: 20px;
 	line-height: 35px;
 	box-sizing: border-box;
-	border-bottom: 1px solid;
 	font-family: $font-family-light;
+	margin-bottom: 1px;
 	&:hover{
 		color: #d7d5d7;
 		background: #8e9298;
