--- a/src/jade/blocks/_main-section.jade
+++ b/src/jade/blocks/_main-section.jade
@@ -1,6 +1,8 @@
 //------------ Main block -------------
 section.workspace
-	h1.workspace__title Генератор водяных знаков
-	.workspace__unit
+  h1.workspace__title Генератор водяных знаков
+  .workspace__unit
+    // Просто тестовый блок
+    .workspace__square(class="dragElement ui-widget ui-corner-all ui-state-error")
 include _sidebar
 
