added pseudo element bottom to the inputs block

--- a/src/jade/blocks/_sidebar_inputs.jade
+++ b/src/jade/blocks/_sidebar_inputs.jade
@@ -6,7 +6,7 @@
       span.fake__placeholder
         |Загрузите изображение    
     label(for="fileupload", class="").fileupload__label
-      input(type="file", id="fileupload" name="name", value="", accept="image/jpeg,image/png,image/gif").fileupload__input  
+      input(type="file", id="fileupload" name="name", value="").fileupload__input  
   .watermark__section
     span.watermark__section-name
       |Водяной знак
@@ -14,4 +14,4 @@
       span.fake__placeholder
         |Загрузите изображение
     label(for="watermark", class="").fileupload__label
-      input(type="file", name="name", id="watermark" value="", accept="image/jpeg,image/png,image/gif").fileupload__input
+      input(type="file", name="name", id="watermark" value="").fileupload__input
