--- a/src/jade/blocks/_main-section.jade
+++ b/src/jade/blocks/_main-section.jade
@@ -3,6 +3,6 @@ section.workspace
   h1.workspace__title Генератор водяных знаков
   .workspace__unit
     // Просто тестовый блок
-    .workspace__square(class="dragElement ui-widget ui-corner-all ui-state-error")
+    .workspace__square
 include _sidebar
 
