--- a/src/style/layout/_main-section.scss
+++ b/src/style/layout/_main-section.scss
@@ -25,9 +25,13 @@
 		background: #fff;
 	}
 	&__square{
-		width: 50px;
-		height: 50px;
+		width: 100px;
+		height: 100px;
 		background: #ccc;
+		display: inline-block;
+		span{
+			display: block;
+		}
 	}
 }
 
