--- a/src/style/components/_sidebar_inputs.scss
+++ b/src/style/components/_sidebar_inputs.scss
@@ -18,13 +18,13 @@
   }
 }
 
-.picture__section,
-.watermark__section {
+.picture__section {
   margin-bottom: 25px;
 }
 
 .watermark__section {
   margin-top: -6px;
+  margin-bottom: 32px;
 }
 
 .picture__section-name,
