Sidebar position button function

--- a/src/jade/blocks/_sidebar-position.jade
+++ b/src/jade/blocks/_sidebar-position.jade
@@ -4,23 +4,23 @@
 		.sidebar-position-square
 			ul.sidebar-position-list
 				li.sidebar-position__item
-					a(src="#" data-position="top-left").sidebar-position__link.top-left
+					a(href="#" data-position="left top").sidebar-position__link.top-left
 				li.sidebar-position__item
-					a(src="#" data-position="top-center").sidebar-position__link.top-center
+					a(href="#" data-position="center top").sidebar-position__link.top-center
 				li.sidebar-position__item
-					a(src="#" data-position="top-right").sidebar-position__link.top-right
+					a(href="#" data-position="right top").sidebar-position__link.top-right
 				li.sidebar-position__item
-					a(src="#" data-position="middle-left").sidebar-position__link.middle-left
+					a(href="#" data-position="left center").sidebar-position__link.middle-left
 				li.sidebar-position__item
-					a(src="#" data-position="middle-center").sidebar-position__link.middle-center
+					a(href="#" data-position="center center").sidebar-position__link.middle-center
 				li.sidebar-position__item
-					a(src="#" data-position="middle-right").sidebar-position__link.middle-right
+					a(href="#" data-position="right center").sidebar-position__link.middle-right
 				li.sidebar-position__item
-					a(src="#" data-position="bottom-left").sidebar-position__link.bottom-left
+					a(href="#" data-position="left bottom").sidebar-position__link.bottom-left
 				li.sidebar-position__item
-					a(src="#" data-position="bottom-center").sidebar-position__link.bottom-center
+					a(href="#" data-position="center bottom").sidebar-position__link.bottom-center
 				li.sidebar-position__item
-					a(src="#" data-position="bottom-right").sidebar-position__link.bottom-right
+					a(href="#" data-position="right bottom").sidebar-position__link.bottom-right
 		.sidebar-position-coordinates
 			.wrapper-position
 				label.sidebar-position__coordinate-labelX
