Move the image is finished

--- a/src/jade/blocks/_sidebar-position.jade
+++ b/src/jade/blocks/_sidebar-position.jade
@@ -25,12 +25,12 @@
 			.wrapper-position
 				label.sidebar-position__coordinate-labelX
 					input.position-input.coordinateX
-				.position-arrow
-					.position-arrow__up
-					.position-arrow__down
+				//- .position-arrow
+				//- 	.position-arrow__up
+				//- 	.position-arrow__down
 			.wrapper-position
 				label.sidebar-position__coordinate-labelY
 					input.position-input.coordinateY
-				.position-arrow
-					.position-arrow__up
-					.position-arrow__down
+				//- .position-arrow
+				//- 	.position-arrow__up
+				//- 	.position-arrow__down
