--- a/src/style/components/_sidebar_position.scss
+++ b/src/style/components/_sidebar_position.scss
@@ -61,6 +61,7 @@
 
 	&__item {
 		display: inline-block;
+
 	}
 
 	&__link {
@@ -69,6 +70,9 @@
 		width: 33px;
 		border-right: 1px solid $secondary-color;
 		border-bottom: 1px solid $secondary-color;
+		&--active{
+			background: #f97e76;
+		}
 	}
 
 	.top-right, .middle-right, .bottom-right {
@@ -118,7 +122,7 @@
 	text-align: center;
 }
 
-.position-arrow, .ui-spinner-button, .ui-state-default, .ui-spinner-button{
+.position-arrow{
 	height: 41px;
 	display: inline-block;
 	padding-top: 4px;
@@ -151,6 +155,3 @@
 
 
 
-.ui-widget input{
-	font-family: $font-family-light, sans-serif;
-}
