--- a/src/jade/blocks/_sidebar-position.jade
+++ b/src/jade/blocks/_sidebar-position.jade
@@ -24,13 +24,7 @@
 		.sidebar-position-coordinates
 			.wrapper-position
 				label.sidebar-position__coordinate-labelX
-					input.position-input.coordinateX
-				//- .position-arrow
-				//- 	.position-arrow__up
-				//- 	.position-arrow__down
+					input(type="text" value="0").position-input.coordinateX
 			.wrapper-position
 				label.sidebar-position__coordinate-labelY
-					input.position-input.coordinateY
-				//- .position-arrow
-				//- 	.position-arrow__up
-				//- 	.position-arrow__down
+					input(type="text" value="0").position-input.coordinateY
