--- a/src/style/layout/_main-section.scss
+++ b/src/style/layout/_main-section.scss
@@ -20,7 +20,7 @@
 		font-weight: 300;
 	}
 	&__unit{
-		width: 650px;
+		max-width: 650px;
 		height: 530px;
 		background: #fff;
 		position: relative;
@@ -31,6 +31,7 @@
 		height: 130px;
 		background: #ccc;
 		display: inline-block;
+		margin-left: 0.5px;
 	}
 }
 
