--- a/src/jade/blocks/_sidebar-upload.jade
+++ b/src/jade/blocks/_sidebar-upload.jade
@@ -8,6 +8,7 @@
     label(for="fileupload", class="").fileupload__label
       input(type="file", id="fileupload" name="name", value="", accept="image/jpeg,image/png,image/gif").fileupload__input  
   .watermark__section
+    .watermark__section_disable
     span.watermark__section-name
       |Водяной знак
     span.fake__input
