--- a/src/style/layout/_main-section.scss
+++ b/src/style/layout/_main-section.scss
@@ -22,7 +22,7 @@
 	&__unit{
 		width: 650px;
 		height: 530px;
-		background: #fff;
+		background: url('/img/bg-mini.png');
 		position: relative;
 		overflow: hidden;
 	}
