--- a/src/jade/blocks/_sidebar-position.jade
+++ b/src/jade/blocks/_sidebar-position.jade
@@ -1,5 +1,6 @@
 .sidebar-position
-	.sidebar-position-title Положение
+	.sidebar-position_disable
+	h3.sidebar-position-title Положение
 	.sidebar-position-content
 		.sidebar-position-square
 			ul.sidebar-position-list
