--- a/src/jade/blocks/_main-section.jade
+++ b/src/jade/blocks/_main-section.jade
@@ -1,8 +1,7 @@
 //------------ Main block -------------
 section.workspace
   h1.workspace__title Генератор водяных знаков
-  .workspace__unit
+  .workspace__unit.upload-img
     .workspace__square
 
 include _sidebar
-
