--- a/src/jade/blocks/_sidebar-upload.jade
+++ b/src/jade/blocks/_sidebar-upload.jade
@@ -6,7 +6,7 @@
       span.fake__placeholder
         |Загрузите изображение    
     label(for="fileupload", class="").fileupload__label
-      input(type="file", id="fileupload" name="name", value="", accept="image/jpeg,image/png,image/gif").fileupload__input  
+      input(type="file", id="fileupload" name="files[]" multiple="", value="", accept="image/jpeg,image/png,image/gif").fileupload__input  
   .watermark__section
     .watermark__section_disable
     span.watermark__section-name
