--- a/src/jade/blocks/_menu.jade
+++ b/src/jade/blocks/_menu.jade
@@ -2,7 +2,7 @@
 	//-------- Language block ------------
 
 	.language
-		- var lang = [['#', 'rus', 'РУС'], ['#', 'eng', 'ENG']]
+		- var lang = [['#', 'ru', 'РУС'], ['#', 'eng', 'ENG']]
 		ul.language__list
 			each item in lang
 				li.language__item
