--- a/src/jade/blocks/_footer.jade
+++ b/src/jade/blocks/_footer.jade
@@ -1,3 +1,3 @@
 .footer-container
-	small.footer__copyright
-		| © 2014, Это мой сайт, пожалуйста, не копируйте и не воруйте его
+	small.footer__copyright.lng
+		| © 2016, Это мой сайт, пожалуйста, не копируйте и не воруйте его
