--- a/src/jade/blocks/_sidebar-buttons.jade
+++ b/src/jade/blocks/_sidebar-buttons.jade
@@ -1,5 +1,5 @@
 .sidebar-buttons
 	.sidebar-buttons__buttons-row
 		.sidebar-buttons__buttons-row_disable
-		button.button.reset-btn Сброс
-		button.button.download-btn Скачать
+		button.button.reset-btn.lng Сброс
+		button.button.download-btn.lng Скачать
