--- a/src/jade/blocks/_main-section.jade
+++ b/src/jade/blocks/_main-section.jade
@@ -1,4 +1,8 @@
 
-	h1.workspace__title Генератор водяных знаков
-	.workspace__unit
+//------------ Main block -------------
+section.workspace
+  h1.workspace__title Генератор водяных знаков
+  .workspace__unit
+    .workspace__square
+
 include _sidebar
