--- a/src/jade/blocks/_sidebar-position.jade
+++ b/src/jade/blocks/_sidebar-position.jade
@@ -1,6 +1,6 @@
 .sidebar-position
 	.sidebar-position_disable
-	h3.sidebar-position-title.lng Положение
+	h3.sidebar-position-title(data-translate="place") Положение
 	.sidebar-position-content
 		.sidebar-position-square
 			ul.sidebar-position-list
