--- a/src/jade/blocks/_sidebar.jade
+++ b/src/jade/blocks/_sidebar.jade
@@ -1,5 +1,5 @@
 aside.sidebar
-	h2.sidebar__title.lng Настройки
+	h2.sidebar__title(data-translate="settings") Настройки
 	include _sidebar-upload
 	include _sidebar-position
 	include _sidebar-slider
