--- a/src/jade/blocks/_sidebar-upload.jade
+++ b/src/jade/blocks/_sidebar-upload.jade
@@ -1,5 +1,5 @@
 .inputs
-  form(action="js/libs/upload/server/php/" method="POST" enctype="multipart/form-data")#fileuploads
+  form(id="fileuploads" action="js/libs/upload/server/php/" method="POST" enctype="multipart/form-data")
     .picture__section
       span.picture__section-name
         |Исходное изображение
@@ -7,7 +7,7 @@
         span.fake__placeholder
           |Загрузите изображение    
       label(for="fileupload", class="").fileupload__label
-        input(type="file", id="fileupload" name="name", value="", accept="image/jpeg,image/png,image/gif").fileupload__input-img
+        input(id="fileupload" type="file" name="files[]" multiple="").fileupload__input-img
       span.error_message
         | Файл не того формата!   
     .watermark__section
