--- a/src/jade/blocks/_main-section.jade
+++ b/src/jade/blocks/_main-section.jade
@@ -3,6 +3,7 @@
 section.workspace
   h1.workspace__title(data-translate="watermarkGenerator") Генератор водяных знаков
   .workspace__unit
-    .workspace__square
+    .workspace__background
+      .workspace__square
 
 include _sidebar
