--- a/src/style/layout/_main-section.scss
+++ b/src/style/layout/_main-section.scss
@@ -26,6 +26,9 @@
 		background: url('/img/bg-mini.png');
 		position: relative;
 		overflow: hidden;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 	}
 	&__square{
 		background: #ccc;
