worked merge with opacity and position and download

--- a/src/style/components/_slider.scss
+++ b/src/style/components/_slider.scss
@@ -32,9 +32,10 @@
 		padding: 20px 20px;
 
 		&-title {
-			font-family: 'robotolight';
-			font-size: 14px;
-			color: #2e3641;
+		    font-size: 14px;
+		    color: #3b424d;
+		    font-family: "robotolight";
+		    font-weight: 300;
 			margin: 0 0 27px;
 		}
 
