--- a/src/jade/blocks/_sidebar-position.jade
+++ b/src/jade/blocks/_sidebar-position.jade
@@ -4,7 +4,7 @@
 	.sidebar-position__mode-switcher
 		.single-mode
 		.tiling-mode
-	.sidebar-position-content
+	.sidebar-position-content.single
 		.sidebar-position-square
 			ul.sidebar-position-list
 				li.sidebar-position__item
