--- a/src/jade/blocks/_sidebar-upload.jade
+++ b/src/jade/blocks/_sidebar-upload.jade
@@ -4,7 +4,7 @@
 			span.picture__section-name(data-translate="originalImage")
 				|Исходное изображение
 			span.fake__input
-				span.fake__placeholder(data-translate="downloadImage")
+				span.fake__placeholder.no-use(data-translate="downloadImage")
 					|Загрузите изображение
 			label(for="fileupload", class="").fileupload__label
 				input(type="file", id="fileupload", name="files[]").fileupload__input-img
@@ -15,7 +15,7 @@
 			span.watermark__section-name(data-translate="watermark")
 				|Водяной знак
 			span.fake__input
-				span.fake__placeholder(data-translate="downloadImage")
+				span.fake__placeholder.no-use(data-translate="downloadImage")
 					|Загрузите изображение
 			label(for="watermark", class="").fileupload__label
 				input(type="file", id="watermark", name="files[]").fileupload__input-watermark
